# doctor-app-mri-analyzer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json
.github/: copilot-instructions.md
docker/: Dockerfile.fastsurfer-cu130
docs/: api_guide.md  configuracion_cpu_gpu.md  fastsurfer_modules.md  fastsurfer_overview.md  guia_instalacion_windows.md  missing_report_fields.md
scripts/: run.py  run_worker.py
src/app/: __init__.py  main.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: health.py  mri.py
src/app/core/: config.py  redis.py  security.py
src/app/models/: __init__.py  schemas.py
src/app/services/: __init__.py  fastsurfer.py  job_manager.py  pdf_generator.py  reference_values.py  stats_parser.py  volume_extractor.py
src/app/workers/: __init__.py  mri_worker.py
tests/: conftest.py
tests/api/: test_auth.py  test_health.py  test_mri.py
